--- a/index.html
+++ b/index.html
@@ -16,153 +16,38 @@
 </head>
 <body onload="renderButacas()">
     <div class="contenedor">
+        <h1>CINE</h1>
+        <h2>REFERENCIA BUTACAS:</h2>
+        <p>
+            <div class="butaca referencia">
+                <input type="checkbox" id="id" />
+                <label for="id"></label>
+                <span>Libre</span>
+            </div>
+        </p>
+        <p>
+            <div class="butaca referencia">
+                <input type="checkbox" id="id" checked />
+                <label for="id"></label>
+                <span>Seleccionada para reservar</span>
+            </div>
+        </p>
+        <p>
+            <div class="butaca referencia">
+                <input type="checkbox" id="id" disabled />
+                <label for="id"></label>
+                <span>Ocupada</span>
+            </div>
+        </p>
+
         <div class="pantalla">PANTALLA</div>
         <form action="">
             <div class="butacas" id="id-butacas">
                 <!-- <div class="butaca">
-                    <input type="checkbox" id="checkbox1" />
-                    <label for="checkbox1"></label>
-                </div>
-                <div class="butaca">
                     <input type="checkbox" id="checkbox2" />
-                    <label for="checkbox2"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox3" disabled />
-                    <label for="checkbox3"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox4" disabled />
-                    <label for="checkbox4"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox5" />
-                    <label for="checkbox5"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox6" />
-                    <label for="checkbox6"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox7" />
-                    <label for="checkbox7"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox8" />
-                    <label for="checkbox8"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox9" disabled />
-                    <label for="checkbox9"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox11" />
-                    <label for="checkbox11"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox12" />
-                    <label for="checkbox12"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox13" disabled />
-                    <label for="checkbox13"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox14" disabled />
-                    <label for="checkbox14"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox15" disabled />
-                    <label for="checkbox15"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox16" disabled />
-                    <label for="checkbox16"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox17" />
-                    <label for="checkbox17"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox18" />
-                    <label for="checkbox18"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox19" disabled />
-                    <label for="checkbox19"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox21" />
-                    <label for="checkbox21"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox22" />
-                    <label for="checkbox22"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox23" disabled />
-                    <label for="checkbox23"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox24" disabled />
-                    <label for="checkbox24"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox25" />
-                    <label for="checkbox25"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox26" />
-                    <label for="checkbox26"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox27" />
-                    <label for="checkbox27"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox28" />
-                    <label for="checkbox28"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox29" disabled />
-                    <label for="checkbox29"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox31" />
-                    <label for="checkbox31"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox32" />
-                    <label for="checkbox32"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox33" disabled />
-                    <label for="checkbox33"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox34" disabled />
-                    <label for="checkbox34"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox35" />
-                    <label for="checkbox35"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox36" />
-                    <label for="checkbox36"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox37" />
-                    <label for="checkbox37"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox38" disabled />
-                    <label for="checkbox38"></label>
-                </div>
-                <div class="butaca">
-                    <input type="checkbox" id="checkbox39" disabled />
-                    <label for="checkbox39"></label>
+                    <label for="checkbox2">1</label>
                 </div> -->
+                <!--completado con javascript-->
             </div>
             <div class="submit">
                 <input class="reservar" type="submit" value="RESERVAR">
