--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
     <title>Cine</title>
 </head>
 <body onload="renderButacas()">
-    <div class="contenedor">
-        <h1>CINE</h1>
-        <h2>REFERENCIA BUTACAS:</h2>
+    <div class="referencia-butaca">
         <p>
             <div class="butaca referencia">
                 <input type="checkbox" id="id" />
@@ -87,6 +85,9 @@
                 <span>Ocupada</span>
             </div>
         </p>
+    </div>
+    <div class="contenedor">
+        <h1>CINE</h1>
 
         <div class="pantalla">PANTALLA</div>
         <form action="">
